feat: make picture pages not static

--- a/src/pages/inspiration.astro
+++ b/src/pages/inspiration.astro
@@ -1,36 +1,16 @@
-<img
-  src="https://ridgeline-house.s3.us-west-2.amazonaws.com/exterior/1.png"
-  alt="inspiration 1"
-/>
-<img
-  src="https://ridgeline-house.s3.us-west-2.amazonaws.com/exterior/2.png"
-  alt="inspiration 2"
-/>
-<img
-  src="https://ridgeline-house.s3.us-west-2.amazonaws.com/exterior/3.png"
-  alt="inspiration 3"
-/>
-<img
-  src="https://ridgeline-house.s3.us-west-2.amazonaws.com/exterior/4.png"
-  alt="inspiration 4"
-/>
-<img
-  src="https://ridgeline-house.s3.us-west-2.amazonaws.com/exterior/5.png"
-  alt="inspiration 5"
-/>
-<img
-  src="https://ridgeline-house.s3.us-west-2.amazonaws.com/exterior/6.png"
-  alt="inspiration 6"
-/>
-<img
-  src="https://ridgeline-house.s3.us-west-2.amazonaws.com/exterior/7.png"
-  alt="inspiration 7"
-/>
-<img
-  src="https://ridgeline-house.s3.us-west-2.amazonaws.com/exterior/8.png"
-  alt="inspiration 8"
-/>
-<img
-  src="https://ridgeline-house.s3.us-west-2.amazonaws.com/exterior/9.png"
-  alt="inspiration 9"
-/>
+---
+const inspirationPagesData = await fetch(
+  "https://ridgeline-house.s3.us-west-2.amazonaws.com/inspirationpages"
+);
+const inspirationPagesText = await inspirationPagesData.text();
+const inspirationPageList = inspirationPagesText.split(",");
+---
+
+{
+  inspirationPageList.map((page) => (
+    <img
+      src={`https://ridgeline-house.s3.us-west-2.amazonaws.com/inspiration/${page}.png`}
+      alt={`inspiration ${page}`}
+    />
+  ))
+}
