feat: switch plans page to pdf on s3

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import { SITE_TITLE } from "../consts";
 
 const pages = [
   {
-    url: "/plans",
+    url: "https://ridgeline-house.s3.us-west-2.amazonaws.com/plans.pdf",
     title: "plans",
   },
   {
